index文件中文件引用路径调整

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: 赵志
  * @Date: 2023-04-14 17:06:18
- * @LastEditTime: 2023-04-14 17:09:40
+ * @LastEditTime: 2023-04-14 17:27:03
  * @LastEditors: 赵志
  * @Description: 
 -->
@@ -12,11 +12,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="/dist/favicon.ico">
+    <link rel="icon" href="./dist/favicon.ico">
     <title>sankey-demo</title>
-    <script defer="defer" src="/dist/js/chunk-vendors.8c15caf6.js"></script>
-    <script defer="defer" src="/dist/js/app.ce64f394.js"></script>
-    <link href="/dist/css/app.668a0722.css" rel="stylesheet">
+    <script defer="defer" src="./dist/js/chunk-vendors.8c15caf6.js"></script>
+    <script defer="defer" src="./dist/js/app.ce64f394.js"></script>
+    <link href="./dist/css/app.668a0722.css" rel="stylesheet">
 </head>
 
 <body><noscript><strong>We're sorry but sankey-demo doesn't work properly without JavaScript enabled. Please enable it
